2019-06-06 jsp로 웹에 저장성공

--- a/06.Spring Boot/TestOracleDB2/build.gradle
+++ b/06.Spring Boot/TestOracleDB2/build.gradle
@@ -31,4 +31,6 @@ dependencies {
 	
 	// jdbc spy
 	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4:1.16'
+
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
